Fixed duplicate email registration & large tweets overflowing

--- a/client/assets/css/main.css
+++ b/client/assets/css/main.css
@@ -1,7 +1,7 @@
 html,
 body {
   height: 100%;
-  background: #FFFFFF;
+  background: #e6ecf0;
 }
 
 body {
@@ -167,6 +167,10 @@ img {
   /* border-bottom: 1px solid lightgray; */
 }
 
+#tooltip {
+  font-size: .5rem;
+}
+
 .analytics {
   min-height: 50em;
   padding: 1rem;
@@ -225,9 +229,9 @@ img {
   color: #5D6063;
 }
 
-/* #tweets-table thead {
-  width: 100%;
-} */
+#tweets-table tr {
+  min-height: max-content;
+}
 
 #tweets-table tbody {
   max-height: 600px;
@@ -235,33 +239,49 @@ img {
   width: 100%;
 }
 
-#tweets-table thead,
-#tweets-table tbody,
-#tweets-table tr,
-#tweets-table td,
-#tweets-table th {
+.flex-container-col {
+  display:-webkit-flex;
+  display:-webkit-box;
+  display:-moz-flex;
+  display:-moz-box;
+  display:-ms-flexbox;
+  display:flex;
+  flex-flow: column nowrap;
+}
+
+.flex-container-col a {
   display: block;
 }
 
-#tweets-table thead > tr > th,
-#tweets-table tbody > tr > td {
-  float: left;
+.flex-container-row {
+  display:-webkit-flex;
+  display:-webkit-box;
+  display:-moz-flex;
+  display:-moz-box;
+  display:-ms-flexbox;
+  display:flex;
+  flex-flow: row nowrap;
+}
+
+.flex-container-row a {
+  display: block;
+}
+
+
+/* #tweets-table th,
+#tweets-table td {
+  display: flex;
+  flex-flow: column;
   height: 100%;
-  padding: 1rem;
-}
-
-#tweets-table thead tr {
-  height: 3.5rem;
-}
-
-#tweets-table tbody tr {
-  height: 5rem;
-}
+} */
 
 #tweets-table th:nth-child(1), td:nth-child(1) {
   width: 20%;
 }
-#tweets-table th:nth-child(2), td:nth-child(2) {
+#tweets-table th:nth-child(2) {
+  width: 59%;
+}
+#tweets-table td:nth-child(2) {
   width: 60%;
 }
 #tweets-table th:nth-child(3), td:nth-child(3) {
@@ -466,9 +486,4 @@ hr {
 
 #graph p {
   margin: .5rem;
-}
-
-#charty {
-  width: 400px;
-  height: 400px;
 }
